--- a/research.html
+++ b/research.html
@@ -8,10 +8,10 @@
    <a href="https://avenkatraman31.github.io/">
     Home
    </a>
-   <a href="https://avenkatraman31.github.io/research.md">
+   <a href="https://avenkatraman31.github.io/research.html">
     Research
    </a>
-   <a href="https://avenkatraman31.github.io/academics.md">
+   <a href="https://avenkatraman31.github.io/academics.html">
     Academics
    </a>
   </h2>
