--- a/research.html
+++ b/research.html
@@ -68,7 +68,7 @@
   </p>
   <h5>
    Report:
-   <a href="https://adityavenkatraman.github.io/SUMMER INTERNSHIP REPORT.pdf">
+   <a href="https://avenkatraman31.github.io/SUMMER INTERNSHIP REPORT.pdf">
     Modeling of dynamic recrystallization
    </a>
   </h5>
@@ -77,22 +77,22 @@
   </h5>
   <p>
    &lt;img src="
-   <a href="https://AdityaVenkatraman.github.io/peeq.PNG">
-    https://AdityaVenkatraman.github.io/peeq.PNG
+   <a href="https://avenkatraman31.github.io/peeq.PNG">
+    https://avenkatraman31.github.io/peeq.PNG
    </a>
    "
   </p>
   <p>
    alt="Plastic strain" style="width: 400px;height: 400px;"/&gt;      &lt;img src="
-   <a href="https://AdityaVenkatraman.github.io/grain">
-    https://AdityaVenkatraman.github.io/grain
+   <a href="https://avenkatraman31.github.io/grain">
+    https://avenkatraman31.github.io/grain
    </a>
    size.PNG"
   </p>
   <p>
    alt="grain size" style="width: 400px;height: 380px;"/&gt;      &lt;img src="
-   <a href="https://AdityaVenkatraman.github.io/graph_1.PNG">
-    https://AdityaVenkatraman.github.io/graph_1.PNG
+   <a href="https://avenkatraman31.github.io/graph_1.PNG">
+    https://avenkatraman31.github.io/graph_1.PNG
    </a>
    "
   </p>
@@ -129,7 +129,7 @@
   </p>
   <h5>
    Report:
-   <a href="https://adityavenkatraman.github.io/PARTICLE REINFORCED PLASTICITY final.pdf">
+   <a href="https://avenkatraman31.github.io/PARTICLE REINFORCED PLASTICITY final.pdf">
     Particle reinforced plasticity
    </a>
   </h5>
@@ -138,15 +138,15 @@
   </h5>
   <p>
    &lt;img src="
-   <a href="https://AdityaVenkatraman.github.io/prp_1.PNG">
-    https://AdityaVenkatraman.github.io/prp_1.PNG
+   <a href="https://avenkatraman31.github.io/prp_1.PNG">
+    https://avenkatraman31.github.io/prp_1.PNG
    </a>
    "
   </p>
   <p>
-   alt="boundary conditions" style="width: 400px;height: 400px;"/&gt;      &lt;img src="https://AdityaVenkatraman.github.io/prp_2.PNG" alt="s33_pe33" style="width: 400px;height: 380px;"/&gt;      &lt;img src="
-   <a href="https://AdityaVenkatraman.github.io/prp_3.PNG">
-    https://AdityaVenkatraman.github.io/prp_3.PNG
+   alt="boundary conditions" style="width: 400px;height: 400px;"/&gt;      &lt;img src="https://avenkatraman31.github.io/prp_2.PNG" alt="s33_pe33" style="width: 400px;height: 380px;"/&gt;      &lt;img src="
+   <a href="https://avenkatraman31.github.io/prp_3.PNG">
+    https://avenkatraman31.github.io/prp_3.PNG
    </a>
    "
   </p>
@@ -175,13 +175,13 @@
   </p>
   <p>
    &lt;img src="
-   <a href="https://AdityaVenkatraman.github.io/eps_1.PNG">
-    https://AdityaVenkatraman.github.io/eps_1.PNG
+   <a href="https://avenkatraman31.github.io/eps_1.PNG">
+    https://avenkatraman31.github.io/eps_1.PNG
    </a>
    "
   </p>
   <p>
-   alt="boundary conditions" style="width: 400px;height: 400px;"/&gt;      &lt;img src="https://AdityaVenkatraman.github.io/eps_2.PNG" alt="boundary conditions" style="width: 400px;height: 400px;"/&gt;
+   alt="boundary conditions" style="width: 400px;height: 400px;"/&gt;      &lt;img src="https://avenkatraman31.github.io/eps_2.PNG" alt="boundary conditions" style="width: 400px;height: 400px;"/&gt;
   </p>
  </body>
 </html>
